@@ -174,4 +174,5 @@ v3.2
 - New matching language feature: Is this value present in a predefined set of values?
 - New matching language feature: Basic String concatenation
 - New matching language feature: Variables
+- Make doing 2,3 and 3 steps Next/Prev more efficient
 
